plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}
// ép xài TZ Hồ Chí Minh
bootRun {
	jvmArgs = ["-Duser.timezone=Asia/Ho_Chi_Minh"]
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

    // Google Auth (BẮT BUỘC)
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'

    // Google API core
    implementation 'com.google.api-client:google-api-client:2.7.0'

    // Google Drive API
    implementation 'com.google.apis:google-api-services-drive:v3-rev20230822-2.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.apache.commons:commons-pool2'

	// gmail api
	implementation 'com.google.api-client:google-api-client:2.2.0'
	implementation('org.springframework.boot:spring-boot-starter-mail:3.1.5')
	implementation 'com.cloudinary:cloudinary-http44:1.37.0'

	//redis and kafka
	implementation 'redis.clients:jedis:5.2.0'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.springframework.ai:spring-ai-qdrant-store-spring-boot-starter'
//	implementation 'org.springframework.ai:spring-ai-qdrant'

//	implementation 'io.qdrant:qdrant-client:1.9.0'
// ai
// 🔐 Security + OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
// 🧠 Spring Authorization Server (nếu app đóng vai trò Authorization Server)
	implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.1.1'

// 🗃️ JPA (blocking for user repository)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

// 🔐 JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

// 🧠 Nimbus JWT (Spring Authorization Server dùng)
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
// Message queue
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'com.fasterxml.jackson.core:jackson-databind'


// 🧪 Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

// 🛠 Dev tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation("org.projectlombok:lombok:1.18.42")
// 💬 Lombok (optional)

//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
//	implementation 'org.springframework.boot:spring-boot-starter-security'
//	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.springframework:spring-webflux:6.1.8'

	//	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
}
tasks.withType(Test) {
    enabled = false
}
//
//tasks.named('test') {
//	useJUnitPlatform()
//}